--- a/MemeThing/Views/AddCaption.storyboard
+++ b/MemeThing/Views/AddCaption.storyboard
@@ -58,7 +58,7 @@
                                                     <constraint firstAttribute="height" constant="40" id="T14-aV-BZz"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="send"/>
                                             </textField>
                                             <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xcm-NG-LHC" customClass="SubmitButton" customModule="MemeThing" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="685" width="373" height="50"/>
@@ -102,8 +102,11 @@
                     </view>
                     <connections>
                         <outlet property="captionTextField" destination="KHy-3E-I4Q" id="BVi-in-Bts"/>
+                        <outlet property="keyboardHeightLayoutConstraint" destination="gcT-G6-Ohw" id="Qhd-b3-Wtc"/>
+                        <outlet property="mainView" destination="oqp-zC-yKT" id="mRH-yc-D5M"/>
                         <outlet property="memeImageView" destination="7IK-AJ-lNo" id="IA8-Xi-3a1"/>
                         <outlet property="navigationBar" destination="nkK-uE-dFS" id="xZp-iN-6xU"/>
+                        <outlet property="sendButton" destination="xcm-NG-LHC" id="YPk-ut-lNZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bXW-Rs-L83" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -119,7 +122,7 @@
     <resources>
         <image name="ellipsis" catalog="system" width="128" height="37"/>
         <namedColor name="navBar">
-            <color red="0.94901960784313721" green="0.8666666666666667" blue="0.64313725490196083" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="purpleAccent">
             <color red="0.25490196078431371" green="0.23529411764705882" blue="0.34509803921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
